--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 		<div class="col-6"><!--Space Left Top--></div>
 		<header class="col-6">
 			<nav class="top-right">
-				<a href="https://www.google.com"> +Jeffrey </a>
-				<a href="https://www.google.com"> Gmail </a>
-				<a href="https://www.google.com"> Images </a>
-				<a href="https://www.google.com"> Maps </a>
-				<a href="https://www.google.com"> Docs </a>
+				<ul>
+					<li><a href="https://www.google.com"> +Jeffrey </a></li>
+					<li><a href="https://www.google.com"> Gmail </a></li>
+					<li><a href="https://www.google.com"> Images </a></li>
+					<li><a href="https://www.google.com"> Maps </a></li>
+					<li><a href="https://www.google.com"> Docs </a></li>
+				</ul>
 			</nav>
 		</header>
 	</div>
@@ -79,16 +81,20 @@
 	<footer>
 		<nav>
 			<div class="row">
-				<div class="col-6">
-					<a href="https://www.google.com"> Advertising </a>
-					<a href="https://www.google.com"> Business </a>
-					<a href="https://www.google.com"> About </a>
+				<div class="footer-left">
+					<ul>
+						<li><a href="https://www.google.com"> Advertising </li></a>
+						<li><a href="https://www.google.com"> Business </li></a>
+						<li><a href="https://www.google.com"> About </li></a>
+					</ul>
 				</div>
 				<div class="footer-right">
-					<a href="https://www.google.com"> Privacy </a>
-					<a href="https://www.google.com"> Terms </a>
-					<a href="https://www.google.com"> Settings </a>
-					<a href="https://www.google.com"> Use Google.com </a>				
+					<ul>
+						<li><a href="https://www.google.com"> Privacy </li></a>
+						<li><a href="https://www.google.com"> Terms </li></a>
+						<li><a href="https://www.google.com"> Settings </li></a>
+						<li><a href="https://www.google.com"> Use Google.com </li></a>	
+					</ul>			
 				</div>
 			</div>	
 		</nav>
